update dovecot doet niks

--- a/dovecot/conf.d/10-master.conf
+++ b/dovecot/conf.d/10-master.conf
@@ -53,7 +53,9 @@ service submission-login {
 
 service lmtp {
   unix_listener lmtp {
-    #mode = 0666
+      	mode = 0660
+  	user = postfix
+  	group = postfix
   }
 
   # Create inet listener only if you can't use the above UNIX socket
