--- a/dovecot/conf.d/15-mailboxes.conf
+++ b/dovecot/conf.d/15-mailboxes.conf
@@ -65,7 +65,15 @@ namespace inbox {
   mailbox "Sent Messages" {
     special_use = \Sent
   }
-
+  
+  mailbox INBOX.Junk {
+  	auto = subscribe
+  special_use = \Junk
+  }
+  mailbox INBOX.Trash {
+  	auto = subscribe
+  	special_use = \Trash
+  }
   # If you have a virtual "All messages" mailbox:
   #mailbox virtual/All {
   #  special_use = \All
