--- a/dovecot/dovecot.conf
+++ b/dovecot/dovecot.conf
@@ -24,13 +24,14 @@
 !include_try /usr/share/dovecot/protocols.d/*.protocol
 
 # Abilitiamo i protocolli IMAP e POP3
-mail_location = maildir:/var/vmail/robbe-jacobs1.sb.uclllabs.be/%n
-protocols = imap pop3
+
+protocols = imap
 
 #Allows Dovecot to listen to all input connections (ipv4 / ipv6)
 
 listen = *, ::
-
+auth_verbose = yes
+auth_mechanisms = plain
 passdb {
   driver = passwd-file
   args = /etc/dovecot/passwd
@@ -38,8 +39,9 @@ passdb {
 
 userdb {
   driver = static
-  args = uid=vmail gid=vmail home=/var/vmail/robbe-jacobs1.sb.uclllabs.be/%n
+  args = uid=vmail gid=vmail home=/var/vmail/%d/%n
 }
+
 # A comma separated list of IPs or hosts where to listen in for connections. 
 # "*" listens in all IPv4 interfaces, "::" listens in all IPv6 interfaces.
 # If you want to specify non-default ports or anything more complex,
