--- a/sysctl.conf
+++ b/sysctl.conf
@@ -65,4 +65,6 @@
 # See https://www.kernel.org/doc/html/latest/admin-guide/sysrq.html
 # for what other values do
 #kernel.sysrq=438
+net.ipv6.conf.default.disable_ipv6 = 0
 
+net.ipv6.conf.all.disable_ipv6 = 0
