--- a/sysctl.conf
+++ b/sysctl.conf
@@ -64,4 +64,8 @@
 # 0=disable, 1=enable all, >1 bitmask of sysrq functions
 # See https://www.kernel.org/doc/html/latest/admin-guide/sysrq.html
 # for what other values do
-#kernel.sysrq=438
+#kernel.sysrq=438i
+
+net.ipv6.conf.default.disable_ipv6 = 0
+
+net.ipv6.conf.all.disable_ipv6 = 0
