--- a/incron.d/etc.conf
+++ b/incron.d/etc.conf
@@ -3,7 +3,10 @@
 /etc/cron.weekly IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/modules-load.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logrotate.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dconf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/dconf/db IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/binfmt.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/gtk-3.0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/keys IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/letsencrypt/live IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -51,6 +54,7 @@
 /etc/network/if-down.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/gss/mech.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/sensors.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/init IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/php/8.1 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -68,12 +72,12 @@
 /etc/dhcp/dhclient-enter-hooks.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rc5.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mrt IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/154a62de09c7ed17645d478778a28bd5 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/d7d338d3d66c2613c2475aad9953a3d0 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/3b33fd880e918207c82cd6cbc4f8e96e IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/b570a500cad5a5808ffe7cb1d0e01aaf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/bb005d7aee6a43326a8e5a7610b5cabf IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
-/etc/mrt/8c076909cb69d2e88d7401852e77229d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/570ad0658434b25bbea0b1fba03c97d4 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/e0816c8e8af91ceda1ce7ac664068758 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/386546a9c7ad317920656de3737a8832 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/6c95ad565f6e2f09d73654fb7745d6f5 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/b91f9fef8a84f1baa2abf4b88a593ee4 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/mrt/d701fc5b536a684f221f380bf540a640 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ufw/applications.d/apache2 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -106,6 +110,8 @@
 /etc/logcheck/ignore.d.paranoid IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck/ignore.d.server IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/logcheck/ignore.d.workstation IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/glvnd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/glvnd/egl_vendor.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/update-manager IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/update-manager/release-upgrades.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/pm IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -121,6 +127,10 @@
 /etc/cron.hourly IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/rsyslog.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/vim IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/vulkan IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/vulkan/explicit_layer.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/vulkan/icd.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/vulkan/implicit_layer.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/security IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/security/namespace.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/security/limits.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -151,9 +161,12 @@
 /etc/X11/xorg.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/skel IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/console-setup IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/pulse IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/pulse/client.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg/autostart IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/xdg/systemd IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/xdg/Xwayland-session.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mysql IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mysql/mysql.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/mysql/conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -163,6 +176,7 @@
 /etc/dpkg IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg/dpkg.cfg.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/dpkg/origins IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/environment.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/modprobe.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ca-certificates IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ca-certificates/update.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -180,7 +194,9 @@
 /etc/systemd/system/sockets.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/system/multi-user.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/user IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/systemd/user/graphical-session-pre.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/systemd/user/sockets.target.wants IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/libnl-3 IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/terminfo IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/insserv.conf.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/alternatives IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
@@ -201,4 +217,5 @@
 /etc/rc4.d IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/netplan IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/selinux IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
+/etc/wireshark IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
 /etc/ubuntu-advantage IN_CLOSE_WRITE,recursive=false /etc/scripts/backup.sh $@/$#
